# FreeChat

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
Backend/: Dockerfile  db.sqlite3  main.py
Backend/core/: config.py
Backend/db/: db.py
Backend/db/models/: chat.py  chatUser.py  message.py  user.py
Backend/src/: db.sqlite3  main.py
Backend/src/api/: __init__.py  admin.py  auth.py  chat.py  message.py  user.py
Backend/src/certs/: jwt-private-example.pem  jwt-public-example.pem
Backend/src/core/: config.py
Backend/src/db/: db.py
Backend/src/db/models/: chat_users.py  chats.py  messages.py  users.py
Backend/src/posts/: admin.py  chats.py  messages.py  users.py
Backend/src/schemas/: chat.py  message.py  user.py
Backend/src/services/: auth.py
Frontend/: .env  Dockerfile  package-lock.json  package.json  store.ts
Frontend/FreeChat/: package-lock.json  package.json
Frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
Frontend/src/components/: Header.tsx  InputTooltip.tsx  LoginComponent.tsx  Message.tsx  RegisterComponent.tsx  SelectedChat.tsx  SideBar.tsx
Frontend/src/connection/: Thunks.ts  authSlice.ts  authThunk.ts  checkConnectionThunk.ts  classes.ts  secureKeys.ts
Frontend/src/connection/Slices/: MessagesSlice.ts  authSlice.ts  chatSlice.ts
Frontend/src/pages/: AuthPage.tsx  LoginPage.tsx  MainPage.tsx  RegisterPage.tsx
Frontend/src/styles/: Header.module.css  MainPage.module.css  SideBar.module.css
